Name: graphics-drawingcombinators
Description:
    This module is a functional wrapper around OpenGL, so you don't
    have to go into the deep, dark world of imperative stateful
    programming just to draw stuff.  It supports 2D only (for now),
    with support drawing geometry, images, and text.
Version: 1.4.4
Stability: experimental
Synopsis: A functional interface to 2D drawing in OpenGL
License: BSD3
Category: Graphics
Author: Luke Palmer
Homepage: http://github.com/luqui/graphics-drawingcombinators
Maintainer: lrpalmer@gmail.com
Build-Type: Simple
Extra-Source-Files: example.hs
cabal-Version: >= 1.6

source-repository head
  type:     git
  location: http://github.com/luqui/graphics-drawingcombinators

Flag ftgl
    Description: Does the system have FTGL, thus we could use not sucky fonts

Library
    Build-Depends: base == 4.*, containers, OpenGL >= 2.4 && < 2.7, stb-image == 0.2.*, bitmap >= 0.0.2
    Exposed-Modules: Graphics.DrawingCombinators, Graphics.DrawingCombinators.Affine
    Other-Modules: Graphics.DrawingCombinators.Bitmap
    ghc-options : -Wall
    Ghc-Prof-Options:  -prof -auto-all

    if flag(ftgl)
        Build-Depends: FTGL
    else
        Build-Depends: GLUT
        CPP-Options: -DLAME_FONTS
