Name: graphics-drawingcombinators
Description:
    This module is a functional wrapper around OpenGL, so you don't
    have to go into the deep, dark world of imperative stateful
    programming just to draw stuff.  It supports 2D only (for now),
    with support drawing geometry, images, and text.
Version: 1.4.4
Stability: experimental
Synopsis: A functional interface to 2D drawing in OpenGL
License: BSD3
Category: Graphics
Author: Luke Palmer
Homepage: http://github.com/luqui/graphics-drawingcombinators
Maintainer: lrpalmer@gmail.com
Build-Type: Simple
Extra-Source-Files: example.hs
cabal-Version: >= 1.8

source-repository head
  type:     git
  location: http://github.com/luqui/graphics-drawingcombinators

Library
    Build-Depends: base == 4.*, OpenGL >= 2.2 && < 2.7, stb-image == 0.2.*, bitmap >= 0.0.2, FreeTypeGL
    hs-Source-Dirs: src
    Exposed-Modules: Graphics.DrawingCombinators, Graphics.DrawingCombinators.Affine
    Other-Modules: Graphics.DrawingCombinators.Bitmap
    ghc-options : -Wall
    Ghc-Prof-Options:  -prof -auto-all

Flag examples
  Description: Build example programs
  Default: False

Executable example
  Main-is:       demo/example.hs
  if !flag(examples)
    Buildable:     False
  else
    Buildable:     True
    Build-depends: base >= 3 && < 5,
                   GLFW-b, OpenGL >= 2.2 && < 2.7, graphics-drawingcombinators
    ghc-options:   -Wall
