Name: graphics-drawingcombinators
Description:
    This module is a functional wrapper around OpenGL, so you don't
    have to go into the deep, dark world of imperative stateful
    programming just to draw stuff.  It supports 2D only (for now),
    with support drawing geometry, images, and text.
Version: 1.5.1
Stability: experimental
Synopsis: A functional interface to 2D drawing in OpenGL
License: BSD3
Category: Graphics
Author: Luke Palmer
Homepage: http://github.com/luqui/graphics-drawingcombinators
Maintainer: lrpalmer@gmail.com
Build-Type: Simple
Extra-Source-Files: demo/example.hs
cabal-Version: >= 1.8

source-repository head
  type:     git
  location: http://github.com/luqui/graphics-drawingcombinators

Flag ftgl
    Description: Does the system have FTGL, thus we could use not sucky fonts

Library
    Build-Depends: base == 4.*, OpenGL >= 2.9 && < 2.10, stb-image == 0.2.*, bitmap >= 0.0.2, bitmap-opengl >= 0.0.1.5
    hs-Source-Dirs: src
    Exposed-Modules: Graphics.DrawingCombinators, Graphics.DrawingCombinators.Affine
    ghc-options : -Wall
    Ghc-Prof-Options:  -prof -auto-all
    if flag(ftgl)
        Build-Depends: FTGL
    else
        Build-Depends: GLUT
        CPP-Options: -DLAME_FONTS

Flag examples
  Description: Build example programs
  Default: False

Executable example
  Main-is:       demo/example.hs
  if !flag(examples)
    Buildable:     False
  else
    Buildable:     True
    Build-depends: base, GLFW-b >=1.4.6 && <1.5, OpenGL, graphics-drawingcombinators
    ghc-options:   -Wall
